<resources>
    <string name="app_name">Hue-Doku</string>
    <string name="playButtonText">New Game</string>
    <string name="continueButtonText">Continue</string>
    <string name="settingsContentDescription">Settings</string>

    <string name="defaultColorPaletteContentDescription">Default Color Palette</string>
    <string name="altColorPalette1ContentDescription">High Contrast Color Palette 1</string>
    <string name="altColorPalette2ContentDescription">High Contrast Color Palette 2</string>
    <string name="closeButtonContentDescription">Close Button</string>

    <string name="customizePopupTitle">Customize</string>

    <string name="timeStartingText">00:00</string>
    <string name="mistakesStartingText">Mistakes: 0/3</string>
    <string name="mistakesText">Mistakes: %1$d/3</string>

    <!-- Color Input Buttons -->
    <string name="color1Description">Color One</string>
    <string name="color2Description">Color Two</string>
    <string name="color3Description">Color Three</string>
    <string name="color4Description">Color Four</string>
    <string name="color5Description">Color Five</string>
    <string name="color6Description">Color Six</string>
    <string name="color7Description">Color Seven</string>
    <string name="color8Description">Color Eight</string>
    <string name="color9Description">Color Nine</string>

    <string name="eraseButtonDescription">Erase</string>
    <string name="notesButtonDescription">Notes</string>
    <string name="customizeButtonDescription">Customize</string>

    <string name="beginnerDifficultyTitle">Beginner</string>
    <string name="intermediateDifficultyTitle">Intermediate</string>
    <string name="advancedDifficultyTitle">Advanced</string>
    <string name="expertDifficultyTitle">Expert</string>
    <string name="insanityDifficultyTitle">Insanity</string>

    <string name="defaultColorPaletteText">Default</string>
    <string name="altColorPalette1Text">High-Contrast</string>
    <string name="altColorPalette2Text">High-Contrast 2</string>

</resources>