<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTintMode="multiply"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <ImageButton
        android:id="@+id/customizePopupCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:src="@drawable/close"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/closeButtonContentDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customizePopupTitle"
        android:text="@string/customizePopupTitle"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/customizePopupCloseButton"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customizePopupTitle"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">
<RelativeLayout
    android:id="@+id/defaultPaletteBox"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/altPaletteBox1"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/defaultColorImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/defaultcolorpalette"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/defaultColorPaletteContentDescription"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultColorPaletteText"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/defaultColorImage"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
<RelativeLayout
    android:id="@+id/altPaletteBox1"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@drawable/border"
    android:padding="8dp"
    app:layout_constraintStart_toEndOf="@id/defaultPaletteBox"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/altColorImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/altcolorpalette"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/altColorPalette1ContentDescription"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altColorPalette1Text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/altColorImage"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

        <RelativeLayout
            android:id="@+id/altPaletteBox2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/altPaletteBox1"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/altColorImage2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/altcolorpalette2"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/altColorPalette2ContentDescription"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altColorPalette2Text"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_below="@id/altColorImage2"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>