<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hue_doku.MainActivity">

    <Button
        android:id="@+id/homePlayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".70"
        android:text="@string/playButtonText"
        android:textSize="40sp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/customizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <ImageButton
        android:id="@+id/customizeButton"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".30"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/settingsContentDescription"
        android:minHeight="48dp"
        android:src="@drawable/paintbrush"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".70"
        android:text="@string/continueButtonText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homePlayButton"
        android:visibility="gone"
        tools:layout_editor_absoluteY="405dp" />

    <ImageView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/huedoku_logo_text_resized"
        android:contentDescription="@string/customizeButtonDescription"
        android:layout_marginTop="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>